# geolip-sd-trainer

./: .gitignore  CLAUDE.md  README.md  download_cache.py  generate_data.py  prepare_cache.py  pyproject.toml  requirements.txt  run_phase1.py
docs/: DATA_PIPELINE.md  MULTIPOD.md
geolip_sd_trainer/: __init__.py  checkpoint.py  dist.py  model.py  trainer.py
geolip_sd_trainer/data/: __init__.py  aleph.py  cache_format.py  download_cache.py  generate.py  hf_io.py  prepare_cache.py
geolip_sd_trainer/text_encoder/: __init__.py  clip_g_test.py  clip_text.py  clip_text_test.py
geolip_sd_trainer/transformer/: __init__.py  unet.py  unet_test.py
geolip_sd_trainer/vae/: __init__.py  vae.py  vae_test.py
geolip_sd_trainer/vlm/: __init__.py  qwen.py
tests/: test_optimizations.py
